* make having an older version of CGI::Carp a non-fatal error and
  recommend a newer one in the docs
  -- niko, reported by Ron Bisset <Ron.Bisset *cnrinternational.com>
* make it work (hopefully) with even older versions of CGI::Carp if
  'changecgiprogramname' is set to 'no' in the General section
  -- niko

2005/9/26 -- released version 2.0.3

* fixed FPing probe so it doesn't report 100% loss when the first ping is lost
  -- niko, reported by Matthew Swainston <njunk *exemail.com.au>
* don't need to have all the external modules installed to build the
  documentation -- niko

2005/9/20 -- released version 2.0.2

* reload the config file on HUP signal and switch to the new one if it 
  isn't broken. After reloading, restart gracefully so that no measurement is
  interrupted. The signal can also be triggered by 'smokeping --reload'.
  -- niko, suggested by Taisuke Yamada <tyamadajp *list.rakugaki.org>
* made some alert docs in smokeping_config visible --niko
* optionally only send alerts when the state changes ('edgetrigger')
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* try to trigger an alert with the minimum number of values needed for it
  rather than require a stack with the maximum number of possible values.
  See http://lists.ee.ethz.ch/smokeping-users/msg01654.html for the problem.
  -- niko, reported by Leos Bitto <smokeping *leos.cz>
* automatically regenerate the logo images if Smokeping.pm has been updated --niko

2005/9/5 -- released version 2.0.1

* fixed version number display in basetemplate -- tobi

2005/9/4 -- released version 2.0.0

* updated page template to match new logos and included Niko
  -- tobi
* don't create directories in "datadir" when running as a CGI
  -- niko
* the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
  by specifying the new configuration variable "dyndir" 
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>